@@ -26,7 +26,8 @@ Fixes
   * Testsuite does not any more matplotlib.use('agg') (#2191)
   * In ChainReader, read_frame does not trigger change of iterating position. 
     (Issue #2723, PR #2815)
-  * TRZReader now checks `n_atoms` provided right during initilization. (#2820)
+  * TRZReader now checks `n_atoms` during initilization. (PR #2820)
+  * TRZWriter now writes `n_atoms` to the file. (PR #2820)
 
 
 Enhancements
